# MyHomeWork10.1

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: calc.py  file2.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_calc.py  test_masks.py  test_processing.py  test_widget.py
